# serde-annotate

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
annotate_derive/: BUILD.bazel  Cargo.toml
annotate_derive/src/: ast.rs  attr.rs  expand.rs  lib.rs
examples/: BUILD.bazel  autoschema.rs  samples.rs  transcode.rs
examples/data/: basic2.json5  basic4.json5
private/: test_all_ot_hjson.sh
serde_annotate/: BUILD.bazel  Cargo.toml
serde_annotate/examples/: BUILD.bazel  samples.rs  transcode.rs
serde_annotate/examples/data/: basic1.json5  basic3.json5
serde_annotate/src/: annotate.rs  de.rs  document.rs  hexdump.rs  json.rs  lib.rs  partial.rs  relax.rs  ser.rs  yaml.rs
serde_annotate/tests/: BUILD.bazel  test_erased.rs  test_format.rs  test_partial.rs
serde_annotate_derive/: BUILD.bazel  Cargo.toml
serde_annotate_derive/src/: attr.rs  expand.rs
src/: annotate.rs  color.rs  de.rs  doc_iter.rs  document.rs  error.rs  hexdump.rs  integer.rs  json.rs  lib.rs  partial.rs  relax.pest  relax.rs  ser.rs  yaml.rs
tests/: BUILD.bazel  test_erased.rs  test_format.rs
