[package]
name = "serde_annotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
thiserror = "1.0"
num-traits = "0.2.15"
serde = "1.0"
once_cell = "1.12"
annotate_derive = {path = "annotate_derive"}
inventory = "0.2"

[dev-dependencies]
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json5 = "0.4.1"
deser-hjson = "1.0.2"
serde_yaml = "0.8.24"
clap = { version="3.2.8", features=["derive"] }
