[package]
name = "serde_annotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
thiserror = "1.0"
num-traits = "0.2.15"
serde = "1.0"
once_cell = "1.12"
annotate_derive = {path = "annotate_derive"}
inventory = "0.2"
pest = "2.2"
pest_derive = "2.2"
regex = "1"

[dev-dependencies]
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json5 = "0.4.1"
deser-hjson = "1.0.2"
serde_bytes = "0.11"
serde_yaml = "0.8.24"
clap = { version="3.2.8", features=["derive"] }

[workspace]
members = [
    ".",
    "annotate_derive",
]

[workspace.metadata.raze]
workspace_path = "//third_party/rust/crates"
experimental_api = true
package_aliases_dir = "third_party/rust/crates"
genmode = "Remote"

targets = [
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.json5.'*']
compile_data_attr = '[ "src/json5.pest" ]'

[package.metadata.raze.crates.clap.'*']
compile_data_attr = 'glob([ "*.md", "**/*.md" ])'

[package.metadata.raze.crates.clap_derive.'*']
compile_data_attr = 'glob([ "*.md", "**/*.md" ])'
