load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_proc_macro",
    "rust_test",
)

package(default_visibility = [
    "//visibility:public",
])

licenses([
    "notice",  # Apache 2 license
])

rust_proc_macro(
    name = "annotate_derive",
    srcs = glob(["**/*.rs"]),
    crate_features = [
    ],
    crate_root = "src/lib.rs",
    data = [],
    edition = "2021",
    rustc_flags = [
        "--cap-lints=allow",
    ],
    tags = [
        "crate-name=annotate_derive",
    ],
    version = "0.1.0",
    deps = [
        "//third_party/rust/crates:proc_macro2",
        "//third_party/rust/crates:proc_macro_error",
        "//third_party/rust/crates:quote",
        "//third_party/rust/crates:syn",
    ],
)
