load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_proc_macro",
    "rust_test",
)

package(default_visibility = [
    "//visibility:public",
])

licenses([
    "notice",  # Apache 2 license
])

rust_binary(
    name = "autoschema",
    srcs = ["autoschema.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//annotate_derive",
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//:serde_annotate",
        "@crate_index//:ansi_term",
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:serde",
    ],
)

rust_binary(
    name = "samples",
    srcs = ["samples.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//annotate_derive",
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//:serde_annotate",
        "@crate_index//:ansi_term",
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:serde",
        "@crate_index//:serde_bytes",
    ],
)

rust_binary(
    name = "transcode",
    srcs = ["transcode.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//annotate_derive",
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//:serde_annotate",
        "@crate_index//:ansi_term",
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:serde",
    ],
)
