[package]
name = "serde_annotate"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0"
thiserror = "1.0"
num-traits = "0.2.15"
serde = "1.0"
once_cell = "1.12"
serde_annotate_derive = {path = "../serde_annotate_derive"}
pest = "2.2"
pest_derive = "2.2"
regex = "1"

[dev-dependencies]
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json5 = "0.4.1"
deser-hjson = "1.0.2"
serde_bytes = "0.11"
serde_yaml = "0.8.24"
clap = { version = "4.4", features = ["derive"] }

