load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_proc_macro",
    "rust_test",
)

package(default_visibility = [
    "//visibility:public",
])

licenses([
    "notice",  # Apache 2 license
])

rust_test(
    name = "test_format",
    srcs = ["test_format.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//serde_annotate_derive",
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//serde_annotate",
        "@crate_index//:anyhow",
        "@crate_index//:deser-hjson",
        "@crate_index//:json5",
        "@crate_index//:serde",
        "@crate_index//:serde_bytes",
        "@crate_index//:serde_json",
        "@crate_index//:serde_yaml",
    ],
)

rust_test(
    name = "test_erased",
    srcs = ["test_erased.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//serde_annotate_derive",
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//serde_annotate",
        "@crate_index//:anyhow",
        "@crate_index//:serde",
    ],
)

rust_test(
    name = "test_partial",
    srcs = ["test_partial.rs"],
    edition = "2021",
    proc_macro_deps = [
        "//serde_annotate_derive",
    ],
    deps = [
        "//serde_annotate",
        "@crate_index//:anyhow",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
    ],
)
